--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,4 @@ keywords: monitoramento,acompanhamento,dados,cantareira,mananciais,são paulo,sa
 author: Rafaell Lycan
 baseurl:
 url: https://rafaell-lycan.com/nossa-agua
-exclude: [README.md, LICENSE, package.json, .babelrc, webpack.config.js, .editorconfig, .gitignore]
+exclude: [README.md, LICENSE, package.json, node_modules, .babelrc, webpack.config.js, .editorconfig, .gitignore]
