--- a/package.json
+++ b/package.json
@@ -1,37 +1,22 @@
 {
   "name": "nossa-agua",
-  "version": "1.0.0",
-  "description": "A app based on nossa-agua-sp by @mamomu",
-  "main": "index.js",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
-    "@uirouter/angularjs": "^1.0.4",
-    "angular": "^1.6.4",
-    "express": "^4.15.3"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.0.0",
-    "babel-preset-es2015": "^6.24.1",
-    "css-loader": "^0.28.4",
-    "extract-text-webpack-plugin": "^2.1.2",
-    "file-loader": "^0.11.2",
-    "ng-annotate-loader": "^0.6.1",
-    "node-sass": "^4.5.3",
-    "raw-loader": "^0.5.1",
-    "sass-loader": "^6.0.5",
-    "style-loader": "^0.18.2",
-    "url-loader": "^0.5.9",
-    "webpack": "^2.6.1",
-    "webpack-dev-middleware": "^1.10.2",
-    "webpack-dev-server": "^2.4.5"
-  },
-  "scripts": {
-    "start": "npm run dev",
-    "build": "webpack",
-    "dev": "webpack-dev-server --hot --inline --colors",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Rafaell Lycan <sonny.webdsg@gmail.com>",
-  "license": "MIT"
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
+    "@vitejs/plugin-react": "^2.1.0",
+    "typescript": "^4.6.4",
+    "vite": "^3.1.0"
+  }
 }
